Revision history for Dancer-Plugin-Auth-Extensible-DBIC

{{$NEXT}}
 [API CHANGES]

 [BUG FIXES]

 [DOCUMENTATION]

 [ENHANCEMENTS]

 [NEW FEATURES]

 [STATISTICS]

0.1.2 2013-08-21
 [BUG FIXES]
 - Test::Compile is misbehaving...

 [STATISTICS]
 - code churn: 3 files changed, 11 insertions(+), 3 deletions(-)

0.1.1 2013-08-21
 [BUG FIXES]
 - Remove dependency on MyApp.

 [STATISTICS]
 - code churn: 2 files changed, 19 insertions(+), 1 deletion(-)

0.1.0 2013-08-21
 - First version, unleashed on an unsuspecting world.

 [STATISTICS]
 - code churn: 8 files changed, 120 insertions(+), 105 deletions(-)
